https://ulegalize.atlassian.net/browse/UL-988 getSizeContainer https://ulegalize.atlassian.net/browse/ULK-87 version 3.6.2 https://ulegalize.atlassian.net/browse/ULK-90 event https://ulegalize.atlassian.net/browse/ULK-91 version 3.6.0 https://ulegalize.atlassian.net/browse/ULK-89 3.5.10 Increase partition 3.5.9 validate with riight vckey https://ulegalize.atlassian.net/browse/ULK-86 email not sent https://ulegalize.atlassian.net/browse/ULK-82 version 3.5.6 issue with users without vckey in auth0 https://ulegalize.atlassian.net/browse/UL-955 commuincation ULK-72 - Add name of client type other in parties name Update version 3.5.0 to 3.5.1 ULK-68 - Tests fix UL-948 https://ulegalize.atlassian.net/browse/ULK-67 version 3.5.0 Admin status page UL-948 - Modification for client in usign + fix tags when update and yellow triangle if no email for mediation https://ulegalize.atlassian.net/browse/ULK-67 version 3.5.0 Admin status page UL-948 - change usign dossier contact UL-951 - Patch db to add Other to t_dossier_contact_type UL-948 - change for dossierContact UL-939 - patch DB cre_date & client_from UL-941 - add client_from & cre_date to LawfirmEntity Fix bug : Invoice not sent in the drive UL-930 - TVirtualCabTags no equals and hash UL-939 - change in entity UL-930 - change in DossierRepository ULK-33 - Sort by factureRef ULK-58 [Lawfirm API] Fix Bug invoice : Template (Bigle Legal) fix bug test ULK-58 [Lawfirm API] Fix Bug invoice : Template (Bigle Legal) UL-930 - no tDossiersVcTags in equals and hashcode UL-935 - Patch db for tags impl. UL-930 - bakc-end change to tags implementation version 3.3.2 mysql8 ULK-58 [Lawfirm API] Fix Bug invoice : Template (Bigle Legal) ULK-56 [Lawfirm API] Fix Bug : Find clients without email (in dossier register) https://ulegalize.atlassian.net/browse/ULK-51 client name length fix test unit version 3.3.0 jwt improve ULK-49 [Lawfirm API] Bug fix: unable to select VAT in admin modification tdossiers UL-927 - improve back-end for idClient rem